--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+  <title>Octodex</title>
+<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<ul class="octodex">
+<ul class="octodex">
+
+  
   <li class="octocat">
     <a href="https://octodex.github.com/saritocat">
       <img src="https://octodex.github.com/images/saritocat.png" />
     </a>
     <div class="image-footer">
-      <span class="image-number">115</span>
+      <span class="image-number">114</span>
       <div class="image-caption">
         <span>the</span>
         <a href="https://octodex.github.com/saritocat">Saritocat</a>
@@ -26,12 +28,18 @@
       </div> <!-- .image-caption -->
     </div> <!-- .image-footer -->
   </li>
+
+
+
+
+
+
   <li class="octocat">
     <a href="https://octodex.github.com/topguntocat">
       <img src="https://octodex.github.com/images/topguntocat.png" />
     </a>
     <div class="image-footer">
-      <span class="image-number">114</span>
+      <span class="image-number">113</span>
       <div class="image-caption">
         <span>the</span>
         <a href="https://octodex.github.com/topguntocat">Topguntocat</a>
@@ -41,9 +49,6 @@
             <a href="https://github.com/leereilly">
               <img src="https://github.com/leereilly.png" />
             </a>
-            <a href="https://github.com/jeejkang">
-              <img src="https://github.com/jeejkang.png" />
-            </a>
             <a href="https://github.com/tonyjaramillo">
               <img src="https://github.com/tonyjaramillo.png" />
             </a>
@@ -52,12 +57,22 @@
       </div> <!-- .image-caption -->
     </div> <!-- .image-footer -->
   </li>
+
+
+
+
+
+
+
+
+
+
   <li class="octocat">
     <a href="https://octodex.github.com/carlostocat">
       <img src="https://octodex.github.com/images/carlostocat.gif" />
     </a>
     <div class="image-footer">
-      <span class="image-number">113</span>
+      <span class="image-number">112</span>
       <div class="image-caption">
         <span>the</span>
         <a href="https://octodex.github.com/carlostocat">Carlostocat</a>
